fixed groups not aligned with header

--- a/src/styles/cmps/board-group.scss
+++ b/src/styles/cmps/board-group.scss
@@ -4,10 +4,9 @@
     border-radius: $border-rsize;
     margin-left: $draggable-spacing;
     padding-bottom: $draggable-spacing;
-
 }
 
-.board-container > .smooth-dnd-container > .smooth-dnd-draggable-wrapper:first-of-type {
+.board-container .smooth-dnd-container > .smooth-dnd-draggable-wrapper:first-of-type {
     margin-left: 25px;
 }
 
@@ -23,9 +22,7 @@
     textarea {
         flex-grow: 1;
         font-size: 14px;
-        font-weight: 600;
         color: darken(#172b4d, 5%);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      }
 
      .menu-icon {
